--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+# IntelliJ IDEA project files
+.idea/
+*.iml
+
+# Ignore accidental/misc files
+et --hard 9898f46
